[tool.poetry]
name = "adaptive-monitoring"
version = "0.1.0"
description = ""
authors = ["ocsmit <osmith2@ncsu.edu>"]
readme = "README.md"
packages = [{include = "adaptive_monitoring"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
rasterio = "^1.3.3"
gdal = "3.5.2"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylsp-mypy]
enabled = false
live_mode = false
strict = true
dmypy = true
