[tool.poetry]
name = "pyquad"
version = "0.1.0"
description = ""
authors = ["ocsmit <osmith2@ncsu.edu>"]
readme = "README.md"
packages = [{include = "pyquad"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
scipy = "^1.9.3"
rasterio = "^1.3.3"
gdal = "3.5.2"
matplotlib = "^3.6.2"
numba = "^0.56.4"
jupyterlab = "^3.5.0"
rich = {extras = ["jupyter"], version = "^12.6.0"}

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
mypy = "^0.982"
pytest = "^7.2.0"
coverage = "^6.5.0"

[tool.black]
line-length = 80

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylsp-mypy]
enabled = true
live_mode = false
strict = true
dmypy = true

[tool.poetry2conda]
name = "pyquad"

# Missing stub file overrides
[[tool.mypy.overrides]]
module = "matplotlib.*"
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = "scipy.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rasterio.*"
ignore_missing_imports = true


